updated to gip details and changed buttons to TBD

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>RIP 14</title>
-<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods.">
+  <title>GIP</title>
+<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. In 2024, we are running Grumble in the Pasture, a non-singles bracket tournament to let our traditionally side events shine.">
 <meta name="author" content="DDRIllini">
 
   <!-- we still need to do this for mobile websites -->
@@ -25,13 +25,13 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
-        <h3 style="margin-bottom:0.2em;">RIP 14</h4>
-        <p>March 15-17, 2024 @ UIUC</p>
+        <h3 style="margin-bottom:0.2em;">GIP</h4>
+        <p>Grumble in the Pasture, February 14-16, 2025 @ UIUC</p>
 
         <!-- Standard buttons -->
         <p>
-	<a class="button button-primary" href="https://www.start.gg/tournament/rumble-in-the-prairie-14/details">Start.gg Event Page</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1vL6Fmmi1rMaX_9IsGDughuQPsmWYgOVdPwuBqea6Q6c/edit?usp=sharing">Schedule</a>
+	<a class="button" href="#">Start.gg Event Page (TBD)</a>
+	<a class="button" href="#">Schedule (TBD)</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
@@ -45,14 +45,13 @@
 <a class="button" href="#">Stream D</a>
 
 <h5>Downloads</h5>
-<a class="button button-primary" href="https://drive.google.com/file/d/1b2XRrY3XpEEcgFsLxh13v0lPUZD-N9Hr/view?usp=sharing">Singles DL</a>
-<a class="button button-primary" href="https://drive.google.com/file/d/1yjXVTKcYVrHaY_tkCwAhmEkdogCNpk3H/view?usp=drive_link">Doubles DL</a>
+<a class="button" href="#">Couples DL (TBD)</a>
+<a class="button" href="#">Doubles DL (TBD)</a>
 
 <h5>Rules</h5>
-<a class="button button-primary" href="https://docs.google.com/document/d/18FqXfot5Vj2MihyRqTgG7z3rdB8B7-y0v1KMHMw-3Rw/edit">Singles Rules</a>
-<a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
+<a class="button" href="#">Couples Rules (TBD)</a>
+<a class="button" href="#">Doubles Rules (TBD)</a>
 <br>
-<a class="button button-primary" href="https://docs.google.com/document/d/1kwdQUvPQCCptEP0FXrZaINcdUvozQXr9PQ5L99rwmg4/edit?usp=sharing">Tetris Rules</a>
 
 <h5>Local Guides</h5>
 <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
