--- a/accommodations.html
+++ b/accommodations.html
@@ -31,9 +31,9 @@
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Where to stay in Champaign-Urbana</h4>
           <h5>Hotels</h5>
-	  RIP staff have curated a list of local hotels and costs on this <b><a href="https://docs.google.com/spreadsheets/d/1cBqdXMWqRO3LHyXlXHum_GpTKfqbk8k9Xa6OF8VvwYo/edit#gid=1844837274">spreadsheet</a></b>. The next few sections highlight hotels that have more convenient locations.
+	  GIP staff have curated a list of local hotels and costs on this <b><a href="https://docs.google.com/spreadsheets/d/11-EYg5m1n7ibBdnWFEvP4meotuHkxJt20LoGHcDvZqA/edit?usp=sharing">spreadsheet</a></b>. The next few sections highlight hotels that have more convenient locations.
 	    <h6><b>Illini Union Hotel</b></h6>
-	      RIP staff are working to get a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a> for RIP 14. Details will be updated here and on Discord once finalized.
+	      GIP staff are <b>not</b> working to get a hotel room block at the <a href="https://illiniunionhotel.illinois.edu/rooms-rates">venue</a> for GIP. You are of course welcome to book a room at the venue on your own.
 	    <h6><b>Hotels near iStops</b></h6>
 	      The following hotels are notable for their proximity to iStops listed roughly in order of distance to Illini Union (see <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> for more details): <a href="https://www.marriott.com/en-us/hotels/cmpts-towneplace-suites-champaign-urbana-campustown/overview/">TownePlace Suites by Marriott</a>, <a href="https://www.hilton.com/en/hotels/cmiilhx-hampton-champaign-urbana/">Hampton Inn</a>, <a href="https://www.gatherguestsuites.com/">Yugo Guest Suites</a>, <a href="https://stayatthei.com/">iHotel</a>, and the cluster of hotels on Lincoln Ave between i-74 and Bradley Ave.<br>
 	      <br>
@@ -43,7 +43,7 @@
 	    Some students and townies living near campus list their apartments or extra bedroom(s) on Airbnb.<br>
 	    <br>
 	  <h5>Finding Roommates</h5>
-	    While hotels and Airbnbs may be cheaper in Champaign-Urbana than other big cities, it's still pricey! Many people travel to RIP, so ask around the DDRIllini Discord to see if folks are up to split rooms/costs.
+	    While hotels and Airbnbs may be cheaper in Champaign-Urbana than other big cities, it's still pricey! Many people travel to Champaign-Urbana from out of town, so ask around the DDRIllini Discord to see if folks are up to split rooms/costs.
       </div>
     </div>
   </div>
