updated to gip events

--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 <a class="button" href="#">Stream D</a>
 
 <h5>Downloads</h5>
-<a class="button" href="#">Couples DL (TBD)</a>
 <a class="button" href="#">Doubles DL (TBD)</a>
+<a class="button" href="#">Hard Stuff (TBD)</a>
 
 <h5>Rules</h5>
-<a class="button" href="#">Couples Rules (TBD)</a>
 <a class="button" href="#">Doubles Rules (TBD)</a>
+<a class="button" href="#">Couples Rules (TBD)</a>
+<a class="button" href="#">Mods SRT Rules (TBD)</a>
+<a class="button" href="#">Hard Stuff Rules (TBD)</a>
 <br>
 
 <h5>Local Guides</h5>
