updated GIP schedule and hard stuff pack links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Standard buttons -->
         <p>
 	<a class="button" href="#">Start.gg Event Page (TBD)</a>
-	<a class="button" href="#">Schedule (TBD)</a>
+	<a class="button" href="https://docs.google.com/spreadsheets/d/1nu0jB-FbGEPH4yx1VdhC4Z4DgLAHEu0lJNrv1nw-T-c/edit?usp=sharing">Schedule</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
@@ -45,7 +45,7 @@
 
 <h5>Downloads</h5>
 <a class="button" href="#">Doubles DL (TBD)</a>
-<a class="button" href="#">Hard Stuff (TBD)</a>
+<a class="button" href="https://drive.google.com/file/d/1YNZjzEMOYUOitQ_Puwdvl7p80rzJXY1k/view?usp=sharing">Hard Stuff</a>
 
 <h5>Rules</h5>
 <a class="button" href="#">Doubles Rules (TBD)</a>
