updated start.gg site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Standard buttons -->
         <p>
-	<a class="button" href="#">Start.gg Event Page (TBD)</a>
+	<a class="button button-primary" href="https://www.start.gg/tournament/grumble-in-the-pasture/details">Start.gg Event Page</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1nu0jB-FbGEPH4yx1VdhC4Z4DgLAHEu0lJNrv1nw-T-c/edit?usp=sharing">Schedule</a>
 	</p>
 
