updated doubles links

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <a class="button" href="#">Stream D</a>
 
 <h5>Downloads</h5>
-<a class="button" href="#">Doubles DL (TBD)</a>
+<a class="button" href="https://drive.google.com/file/d/1IDPZYpOAoC_HKIL3680m-u5S8piD8VCp/view?usp=sharing">Doubles</a>
 <a class="button button-primary" href="https://drive.google.com/file/d/1YNZjzEMOYUOitQ_Puwdvl7p80rzJXY1k/view?usp=sharing">Hard Stuff</a>
 
 <h5>Rules</h5>
-<a class="button" href="#">Doubles Rules (TBD)</a>
+<a class="button" href="https://docs.google.com/document/d/13at6aFTJ7aLZKFY5Ynz2-PqYGRRH63WXYdIbCA9UFuQ/edit?usp=sharing">Doubles Rules</a>
 <a class="button" href="#">Couples Rules (TBD)</a>
 <a class="button" href="#">Mods SRT Rules (TBD)</a>
 <a class="button" href="#">Hard Stuff Rules (TBD)</a>
