--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <a class="button" href="https://docs.google.com/document/d/13at6aFTJ7aLZKFY5Ynz2-PqYGRRH63WXYdIbCA9UFuQ/edit?usp=sharing">Doubles Rules</a>
 <a class="button" href="#">Couples Rules (TBD)</a>
 <a class="button" href="#">Mods SRT Rules (TBD)</a>
-<a class="button" href="#">Hard Stuff Rules (TBD)</a>
+<a class="button" href="https://docs.google.com/document/d/13vvZQCCW4sMks38lCxiMg0EDTxGIWfFiiGANXAIw1xw">Hard Stuff Rules</a>
 <br>
 
 <h5>Local Guides</h5>
