--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <a class="button" href="#">Stream D</a>
 
 <h5>Downloads</h5>
-<a class="button button-primary" href="https://drive.google.com/file/d/1IDPZYpOAoC_HKIL3680m-u5S8piD8VCp/view?usp=sharing">Doubles</a>
+<a class="button button-primary" href="https://drive.google.com/file/d/1cHBpWN3hylP0dAaRB8jyI-XXpanRzVio/view?usp=sharing">Doubles Qualifiers</a>
+<a class="button button-primary" href="https://drive.google.com/file/d/1IDPZYpOAoC_HKIL3680m-u5S8piD8VCp/view?usp=sharing">Doubles Pools & Round Robin</a>
 <a class="button button-primary" href="https://drive.google.com/file/d/1YNZjzEMOYUOitQ_Puwdvl7p80rzJXY1k/view?usp=sharing">Hard Stuff</a>
 
 <h5>Rules</h5>
