--- a/media/index.html
+++ b/media/index.html
@@ -23,7 +23,16 @@
 The global script is not loaded. Deobfuscate links using the source code at <a href="./test.js"><code>test.js</code></a>.</p>
 <p>Most links to Google Photos® directories</p>
 
-<h5><span title="new tunes">RIP 13.5</span> <small>2023-11</small></h5>
+<h5>Grumble in the Pasture <small>2025-02</small></h5>
+<p>This event is in progress!</p>
+
+<h5>RIP 14 <small>2024-03</small></h5></p>
+<ul>
+<li>DDRIllini Discord® server: no link available at the moment</li>
+<li>Solus: <a href="spw://TldQEw8NExMR">photos</a></li>
+</ul>
+
+<h5>RIP 13.5 <small>2023-11</small></h5>
 <ul>
 <li>DDRIllini Discord server channels:
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPDwkLDA0NDg4PCQcMCQ8NCgwQ">photos</a>,
@@ -34,25 +43,25 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 
 <h5>RIP 13 <small>2023-03</small></h5>
 <ul>
-<li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">DDRIllini Discord® server, photos channel</a>, assorted</li>
-<li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
-<li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
+<li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://CEtRfkpfC25rUXJzD3tKDwg=">photos</a></li>
-<li>Solus: <a href="stw://TldQEw8NExMR">photos</a></li>
+<li>Solus: <a href="spw://TldQEw8NExMR">photos</a></li>
+<li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
+<li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
 </ul>
 
 <h5>RIP 12.5 <small>2022-11</small></h5>
 <ul>
-<li><a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">DDRIllini Discord® server, photos channel</a>, assorted</li>
+<li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
-<li>Solus: <a href="stw://TldQEw8OEwsR">photos</a></li>
 <li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
+<li>Solus: <a href="spw://TldQEw8OEwsR">photos</a></li>
 </ul>
 
 <h5>RIP 12.1 <small>2022-03</small></h5>
 <ul>
-<li>PSU collab.: <a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">photos</a></li>
 <li>Mallow: <a href="gp://aQhpUVtfUm8LUGhQXWpNWwk=">photos</a></li>
+<li>PSU collab.: <a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">photos</a></li>
 </ul>
 
 <p>RIP 12 would have started&nbsp;on&nbsp;2020-03-13, but&nbsp;was&nbsp;cancelled on&nbsp;2020-03-12 due&nbsp;to&nbsp;the COVID-19&nbsp;pandemic.</p>
