added stream buttons

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
 <h5>Streams</h5>
-<a class="button" href="#">Stream A</a>
-<a class="button" href="#">Stream B</a> <br />
-<a class="button" href="#">Stream C</a>
-<a class="button" href="#">Stream D</a>
+<a class="button button-primary" href="https://www.twitch.tv/sapphronxd">Stream A</a>
+<a class="button button-primary" href="https://www.twitch.tv/intltiming">Stream B</a> <br />
+<a class="button button-primary" href="https://www.twitch.tv/ddrillini2">Stream C</a>
+<a class="button button-primary" href="https://www.twitch.tv/carter">Stream D</a> <br />
+<a class="button button-primary" href="https://www.twitch.tv/ddrillini">Mods SRT Stream</a>
 
 <h5>Downloads</h5>
 <a class="button button-primary" href="https://drive.google.com/file/d/1cHBpWN3hylP0dAaRB8jyI-XXpanRzVio/view?usp=sharing">Doubles Qualifiers</a>
