add missing registered trademark symbol

--- a/media/index.html
+++ b/media/index.html
@@ -34,7 +34,7 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 
 <h5>RIP 13.5 <small>2023-11</small></h5>
 <ul>
-<li>DDRIllini Discord server channels:
+<li>DDRIllini Discord® server channels:
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPDwkLDA0NDg4PCQcMCQ8NCgwQ">photos</a>,
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQcODgoJCgkIBwcLEAoICw4QCxEPDwkMBwoQDA8QDgwICg8NCAcI">general RIP</a>
 </li>
