--- a/media/index.html
+++ b/media/index.html
@@ -24,12 +24,12 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <p>Most links to Google Photos® directories</p>
 
 <h5>Grumble in the Pasture <small>2025-02</small></h5>
-<p>This event is in progress!</p>
+<p>This event ended recently. More links will be available soon.</p>
 
-<h5>RIP 14 <small>2024-03</small></h5></p>
+<h5>RIP 14 <small>2024-03</small></h5>
 <ul>
 <li>DDRIllini Discord® server: no link available at the moment</li>
-<li>Solus: <a href="spw://TldQEw8NExMR">photos</a></li>
+<li>Solus: <a href="spw://TldQEw8MEQ==">photos</a></li>
 </ul>
 
 <h5>RIP 13.5 <small>2023-11</small></h5>
