fix it for real this time

--- a/media/index.html
+++ b/media/index.html
@@ -29,7 +29,7 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <h5>RIP 14 <small>2024-03</small></h5>
 <ul>
 <li>DDRIllini Discord® server: no link available at the moment</li>
-<li>Solus: <a href="spw://TldQEw8MEQ==">photos</a></li>
+<li>Solus: <a href="spw://UBFOV1ATDwwR">photos</a></li>
 </ul>
 
 <h5>RIP 13.5 <small>2023-11</small></h5>
@@ -39,13 +39,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQcODgoJCgkIBwcLEAoICw4QCxEPDwkMBwoQDA8QDgwICg8NCAcI">general RIP</a>
 </li>
 <li>Mallow: <a href="gp://bEgNV2lzV0hpdX1eD0x/Wgc=">photos</a></li>
+<li>Solus: <a href="spw://UBFOV1ATDw0TCxE=">photos</a></li>
 </ul>
 
 <h5>RIP 13 <small>2023-03</small></h5>
 <ul>
 <li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://CEtRfkpfC25rUXJzD3tKDwg=">photos</a></li>
-<li>Solus: <a href="spw://TldQEw8NExMR">photos</a></li>
+<li>Solus: <a href="spw://UBFOV1ATDw0TEBE">photos</a></li>
 <li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
 <li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
 </ul>
@@ -55,13 +56,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">photos channel</a>, assorted</li>
 <li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
 <li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
-<li>Solus: <a href="spw://TldQEw8OEwsR">photos</a></li>
+<li>Solus: <a href="spw://UBFOV1ATDw4TCxE">photos</a></li>
 </ul>
 
 <h5>RIP 12.1 <small>2022-03</small></h5>
 <ul>
 <li>Mallow: <a href="gp://aQhpUVtfUm8LUGhQXWpNWwk=">photos</a></li>
 <li>PSU collab.: <a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">photos</a></li>
+<li>Solus: <a href="spw://UBFOV1ATDw4TDxE">photos</a></li>
 </ul>
 
 <p>RIP 12 would have started&nbsp;on&nbsp;2020-03-13, but&nbsp;was&nbsp;cancelled on&nbsp;2020-03-12 due&nbsp;to&nbsp;the COVID-19&nbsp;pandemic.</p>
