updated to RIP 15 dates and removed GIP buttons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>GIP</title>
-<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. In 2024, we are running Grumble in the Pasture, a non-singles bracket tournament to let our traditionally side events shine.">
+  <title>RIP</title>
+<meta name="description" content="Rumble in the Prairie is one of the longest running tournament series in the dance game community. For over a decade, we've brought together ITG players for tournaments focused on tech, FA, and mods. In 2026, we are running Rumble in the Prairie. Stay tuned for more details.">
 <meta name="author" content="DDRIllini">
 
   <!-- we still need to do this for mobile websites -->
@@ -26,32 +26,30 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
         <h3 style="margin-bottom:0.2em;">GIP</h4>
-        <p>Grumble in the Pasture, February 14-16, 2025 @ UIUC</p>
+        <p>Rumble in the Prairie, March 13-15, 2026 @ UIUC</p>
 
         <!-- Standard buttons -->
         <p>
-	<a class="button button-primary" href="https://www.start.gg/tournament/grumble-in-the-pasture/details">Start.gg Event Page</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1nu0jB-FbGEPH4yx1VdhC4Z4DgLAHEu0lJNrv1nw-T-c/edit?usp=sharing">Schedule</a>
+	<a class="button" href="#">Start.gg Event Page (TBD)</a>
+	<a class="button" href="#">Schedule (TBD)</a>
 	</p>
 
         <a class="button button-primary" href="https://discord.gg/VaBBgP9C7D">Discord</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini">PayPal</a>
 
 <h5>Streams</h5>
-<a class="button button-primary" href="https://www.twitch.tv/sapphronxd">Stream A</a>
-<a class="button button-primary" href="https://www.twitch.tv/intltiming">Stream B</a> <br />
-<a class="button button-primary" href="https://www.twitch.tv/ddrillini2">Stream C</a>
-<a class="button button-primary" href="https://www.twitch.tv/carter">Stream D</a> <br />
-<a class="button button-primary" href="https://www.twitch.tv/ddrillini">Mods SRT Stream</a>
+	<a class="button" href="#">Stream A (TBD)</a>
+	<a class="button" href="#">Stream B (TBD)</a>
+	<a class="button" href="#">Stream C (TBD)</a>
+	<a class="button" href="#">Stream D (TBD)</a>
 
 <h5>Downloads</h5>
-<a class="button button-primary" href="https://drive.google.com/file/d/1cHBpWN3hylP0dAaRB8jyI-XXpanRzVio/view?usp=sharing">Doubles Qualifiers</a>
-<a class="button button-primary" href="https://drive.google.com/file/d/1IDPZYpOAoC_HKIL3680m-u5S8piD8VCp/view?usp=sharing">Doubles Pools & Round Robin</a>
-<a class="button button-primary" href="https://drive.google.com/file/d/1YNZjzEMOYUOitQ_Puwdvl7p80rzJXY1k/view?usp=sharing">Hard Stuff</a>
+<a class="button" href="#">Singles Pack (TBD)</a>
+<a class="button" href="#">Doubles (TBD)</a>
 
 <h5>Rules</h5>
-<a class="button button-primary" href="https://docs.google.com/document/d/13at6aFTJ7aLZKFY5Ynz2-PqYGRRH63WXYdIbCA9UFuQ/edit?usp=sharing">Doubles Rules</a>
-<a class="button button-primary" href="https://docs.google.com/document/d/13vvZQCCW4sMks38lCxiMg0EDTxGIWfFiiGANXAIw1xw">Hard Stuff Rules</a>
+<a class="button" href="#">Singles Rules (TBD)</a>
+<a class="button" href="#">Doubles Rules (TBD)</a>
 <br>
 
 <h5>Local Guides</h5>
