--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 4%">
-        <h3 style="margin-bottom:0.2em;">GIP</h4>
+        <h3 style="margin-bottom:0.2em;">RIP</h4>
         <p>Rumble in the Prairie, March 13-15, 2026 @ UIUC</p>
 
         <!-- Standard buttons -->
