updated links from mallow

--- a/media/index.html
+++ b/media/index.html
@@ -24,11 +24,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <p>Most links to Google Photos® directories</p>
 
 <h5>Grumble in the Pasture <small>2025-02</small></h5>
-<p>This event ended recently. More links will be available soon.</p>
+<ul>
+<li> Mallow: <a href="https://immich.orca.flights/share/CS793kqAB05pTzq6E4sGGCKHRtL-a7RO-L9O0Sen7TO86i084haerrgERfibpyWFVRM">photos</a></li>
+</ul>
 
 <h5>RIP 14 <small>2024-03</small></h5>
 <ul>
 <li>DDRIllini Discord® server: no link available at the moment</li>
+<li>Mallow: <a href="https://immich.orca.flights/share/zYURMeim0x6BpwGHMLJGxbjk9z0kJk0NUThHFv22MJ01khsu0rkbrPiD_ZgMyxUlLqk">photos</a></li>
 <li>Solus: <a href="spw://UBFOV1ATDwwR">photos</a></li>
 </ul>
 
@@ -38,14 +41,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPDwkLDA0NDg4PCQcMCQ8NCgwQ">photos</a>,
 <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQcODgoJCgkIBwcLEAoICw4QCxEPDwkMBwoQDA8QDgwICg8NCAcI">general RIP</a>
 </li>
-<li>Mallow: <a href="gp://bEgNV2lzV0hpdX1eD0x/Wgc=">photos</a></li>
+<li>Mallow: <a href="https://immich.orca.flights/share/l1qRyVWPPzL0k-Zud6UXkzvlO6-NElIFropV46ldAYcJYhdm7CDv77ZqB08CZ1V051U">photos</a></li>
 <li>Solus: <a href="spw://UBFOV1ATDw0TCxE=">photos</a></li>
 </ul>
 
 <h5>RIP 13 <small>2023-03</small></h5>
 <ul>
 <li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAgMCgcHDQkKDA8ICwsMEA8K">photos channel</a>, assorted</li>
-<li>Mallow: <a href="gp://CEtRfkpfC25rUXJzD3tKDwg=">photos</a></li>
+<li>Mallow: <a href="https://immich.orca.flights/share/dEglOk8KFcDjMwQOVjafSzE6TAnqD5Qqws_sxEAehbt-DN6bNqN0KdG-WmcaOaxh7UE">photos</a></li>
 <li>Solus: <a href="spw://UBFOV1ATDw0TEBE">photos</a></li>
 <li>Talkion: <a href="gp://SwtPCXVYS1ZQdFNcblxZSAo=">selfies</a></li>
 <li>Tyler F., Devin: <a href="gp://Vm5RDktvX115aAdfe3tOSQc=">photos</a></li>
@@ -54,14 +57,14 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 <h5>RIP 12.5 <small>2022-11</small></h5>
 <ul>
 <li>DDRIllini Discord® server, <a href="discord://XVhfUlJbVE0RDg8NCQ8MCQwHDA8KBw0PDQ4HEQsLCQ0NDwwIDQcHCgsICwcICBEPEAwNCwkPCgcMDgsLCQsPDg8I">photos channel</a>, assorted</li>
-<li>Mallow: <a href="gp://XU9NUGpICghTTnoMaX9Oewo=">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
+<li>Mallow: <a href="https://immich.orca.flights/share/40oR-YCqYxD_oZVvLw0V1VpJ53btTWbfcfA_5mdM00OEHjJR_6aj1OstAZP2vmX3sqw">photos</a>, <a href="yt://dE9ScHJ6XFN6E1k=">B-roll</a></li>
 <li>PSU collab.: <a href="gp://bVVvc2l+ZklrXGxLWE9XTAg=">photos</a></li>
 <li>Solus: <a href="spw://UBFOV1ATDw4TCxE">photos</a></li>
 </ul>
 
 <h5>RIP 12.1 <small>2022-03</small></h5>
 <ul>
-<li>Mallow: <a href="gp://aQhpUVtfUm8LUGhQXWpNWwk=">photos</a></li>
+<li>Mallow: <a href="https://immich.orca.flights/share/55iUA7i8neJePzcSW7P4Sd2E3rbBYw48NXY75inSdWQ-tREcmcmDGOT8pWJbW17L8iY">photos</a></li>
 <li>PSU collab.: <a href="gp://U0xrRwxISVl9eHZ8S1BabAc=">photos</a></li>
 <li>Solus: <a href="spw://UBFOV1ATDw4TDxE">photos</a></li>
 </ul>
@@ -70,8 +73,8 @@ The global script is not loaded. Deobfuscate links using the source code at <a h
 
 <h5>Older Events</h5>
 <ul>
-<li><a href="gp://X1oMcnxVSVh9Zn9sD2p4Cwk=">RIP 11.5 <small>2019-11</small>, Mallow</a></li>
-<li><a href="gp://V2t+R1VRV0h8f0sJB0hrXwc=">RIP 11, Mallow</a></li>
+<li><a href="https://immich.orca.flights/share/aaSXYjc18UoCfim_5w2AM3B1AikueY1G6N_fKjaVqycRuuRnbKquR3ywuXb_i9ORdF4">RIP 11.5 <small>2019-11</small>, Mallow</a></li>
+<li><a href="https://immich.orca.flights/share/-5EdZLyoosdB-SNkvwwGWkGfn69t3I_z2drSakVk0luIjr8YHU4xwfaNblVpaai4H2E">RIP 11, Mallow</a></li>
 <li><a href="gp://bE5STHtdfG18XktebHh+Ugg=">RIP 10, quietly-turning</a></li>
 <li><a href="gp://XU4PXH5TB111eGpoewx4Wn8=">RIP 9, quietly-turning</a></li>
 <li><a href="gp://aAdzTH9mW2hmCXhraV9QZwk=">RIP 8.5, quietly-turning</a></li>
